# kaggle-projects

./: .gitignore  Image Matching Challenge 2024 - Hexathlon.ipynb  LICENSE  Loan Approval Prediction.ipynb  README.md  house-prices-advanced-regression-techniques.ipynb  pyproject.toml
common/: custom_datasets.py  datasets.py  utils.py
common/math/: functions.py
models/: XGB-spaceship-titanic.json  XGB-spaceship-titanic.pkl  logistic_regression_model.pkl  sXGB-spaceship-titanic.txt  ventilator_pressure-prediction_model.pkl  ventilator_pressure-prediction_model_1.0.0.pkl  xgb_best_model.json  xgb_binary_model.pkl  xgb_nyc_trip_duration.json
notebooks/: image-matching-challenge-2025.ipynb  loan-approval-prediction-logr.ipynb  loan-approval-prediction-rf.ipynb  ventilator-pressure-prediction-rf.ipynb
notebooks/credit-card-fraud-detection/: linear-regression.ipynb
notebooks/landmark-recognition-2021/: EDA.ipynb  efficientnetv2_m.ipynb
notebooks/nyc-taxi-trip-duration/: 0_eda.ipynb  1_preprocessing.ipynb  preprocessing.ipynb
notebooks/spaceship-titanic/: EDA.ipynb  preprocessing.ipynb  training.ipynb
src/common/: datasets.py
src/notebooks/credit-card-fraud-detection/: linear-regression.ipynb
