[tool.poetry]
name = "kaggle-projects"
version = "1.0.0"
description = "Kaggle projects repo"
authors = ["Jason Wedderburn <jasonwj96@gmail.com>"]
packages = [{ include = "common", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "2.1"
torch = "2.5.1"
pandas = "2.2.3"
jupyter = "1.1.1"
plotly = "6.0.0"
scikit-learn = "1.6.1"
matplotlib = "3.10.0"
seaborn = "0.13.2"
xgboost = "2.1.4"
optuna = "4.3.0"
opencv-python = "4.11.0.86"
lightgbm = "^4.6.0"
catboost = "1.2.8"
timm = "1.0.19"
pillow = "11.3.0"
