[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kaggle-projects"
version = "1.0.0"
description = "Kaggle projects repo"
authors = [
    { name = "Jason Wedderburn", email = "jasonwj96@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
    "numpy==2.1",
    "pandas==2.2.3",
    "jupyter==1.1.1",
    "plotly==6.0.0",
    "scikit-learn==1.6.1",
    "matplotlib==3.10.0",
    "seaborn==0.13.2",
    "xgboost==2.1.4",
    "optuna==4.3.0",
    "opencv-python==4.11.0.86",
    "lightgbm>=4.6.0,<5.0.0",
    "catboost==1.2.8",
    "timm==1.0.19",
    "pillow==11.3.0",
    "tqdm==4.67.1",
    "mlflow==3.3.2",
    "kagglehub==0.3.13",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["common"]